--- a/style.css
+++ b/style.css
@@ -57,11 +57,32 @@ html {
 .container {
     width: 100%;
     max-width: 100%;
+    padding: 0;
 }
 
 form {
     width: 100%;
     padding: 16px;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 768px) {
+    form {
+        padding: 16px;
+    }
+    .form-group {
+        padding: 0 16px;
+    }
+    h2 {
+        padding: 0 16px;
+    }
+    .mandatory-note {
+        padding: 0 16px;
+    }
+    button[type="submit"] {
+        margin: 16px;
+        width: calc(100% - 32px);
+    }
 }
 
 h2 {
@@ -119,10 +140,12 @@ input, select {
     width: 100%;
     padding: 12px 16px;
     border: 1px solid #e0e0e0;
-    border-radius: 0;
+    border-radius: 4px;
     font-size: 16px;
     margin-top: 0;
     background-color: #f8f8f8;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 .file-upload input[type="file"] {
